ADD route and logic for min and ma value query param searches woohooooo
